# imap_tools_proxy

./: README.md  __init__.py  pyproject.toml
aioimaplib_proxy/: __init__.py  aioimaplib.py  consts.py  enums.py  errors.py  folder.py  idle.py  mailbox.py  proxy_.py  types.py  utils.py
imap_tools_async/: __init__.py  command.py  consts.py  enums.py  errors.py  folder.py  mailbox.py  protocol.py  query.py  utils.py
imap_tools_proxy/: __init__.py  mailbox.py
imapclient_async/: __init__.py  consts.py  errors.py  folder.py  imap_utf7.py  message.py  types.py
tests/messages/attachment_emails/: attachment_nonascii_filename.eml
tests/messages/error_emails/: content_transfer_encoding_text-html.eml
tests/messages/mime_emails/: raw_email_with_binary_encoded.eml
