[tool.poetry]
name = "aioimaplib-proxy"
version = "0.1.0"
description = "aioimaplib + python-socks"
authors = ["alenkimov <alen.kimov@gmail.com>", "T1murKO", "Vladimir Kaukin <KaukinVK@ya.ru>"]
readme = "README.md"
packages = [{include = "aioimaplib_proxy"}]

[tool.poetry.dependencies]
python = "^3.12"
better-proxy = "^1.2.0"
python-socks = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
