[tool.poetry]
name = "imap-tools-async"
version = "1.0.0"
description = "imap-tools + aioimaplib + python-socks"
authors = ["alenkimov <alen.kimov@gmail.com>", "T1murKO", "Vladimir Kaukin <KaukinVK@ya.ru>"]
readme = "README.md"
packages = [{include = "imap_tools_async"}]

[tool.poetry.dependencies]
python = ">=3.12"
python-socks = "^2.7"

[tool.poetry.group.dev.dependencies]
aiounittest = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
