[tool.poetry]
name = "imapclient-async"
version = "1.0.0"
description = "Modern async IMAP4 client"
authors = ["alenkimov <alen.kimov@gmail.com>"]
readme = "README.md"
packages = [{include = "imapclient_async"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-socks = "^2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
